--- a/chat/src/main/res/layout/item_fragment_friends.xml
+++ b/chat/src/main/res/layout/item_fragment_friends.xml
@@ -43,5 +43,13 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_toRightOf="@id/iv_item_fragment_friends_avatar"/>
+
+        <CheckBox
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cb_item_fragment_friends_check"/>
+
     </RelativeLayout>
 </LinearLayout>
