--- a/chat/src/main/res/layout/activity_user_info.xml
+++ b/chat/src/main/res/layout/activity_user_info.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:text="昵称"
+            android:text="姓名"
             android:textColor="@color/base_color_text_blue"
             android:textSize="20sp"/>
     </RelativeLayout>
@@ -163,6 +163,70 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@drawable/recycler_divider"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="学校"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/tv_user_info_school"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textColor="@color/base_color_text_blue"
+            android:textSize="20sp"/>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@drawable/recycler_divider"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="学院"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/tv_user_info_college"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:textColor="@color/base_color_text_blue"
+            android:textSize="20sp"/>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@drawable/recycler_divider"/>
+
+
+
 
     <Button
         android:id="@+id/btn_user_info_chat"
