--- a/chat/src/main/res/layout/activity_edit_user_detail_gender.xml
+++ b/chat/src/main/res/layout/activity_edit_user_detail_gender.xml
@@ -1,77 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="10dp"
+    android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+    >
 
 
-
-    <RelativeLayout
-        android:id="@+id/rl_edit_user_info_detail_male"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp">
+        android:orientation="vertical">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="男"
-            android:textSize="18sp"/>
-        <ImageView
-            android:id="@+id/iv_edit_user_info_detail_male"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/nim_contact_checkbox_checked_green"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/rl_edit_user_info_detail_female"
-        android:layout_width="match_parent"
+            android:textSize="18sp"
+            android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="女"
-            android:textSize="18sp"/>
-        <ImageView
-            android:id="@+id/iv_edit_user_info_detail_female"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/nim_contact_checkbox_unchecked"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/rl_edit_user_info_detail_other"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="15dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="其他"
-            android:textSize="18sp"/>
-        <ImageView
-            android:id="@+id/iv_edit_user_info_detail_other"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/nim_contact_checkbox_unchecked"/>
-    </RelativeLayout>
+        android:text="男"/>
 
-</LinearLayout>
+
+        <TextView
+            android:textSize="18sp"
+            android:layout_marginTop="28dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="女"/>
+
+    </LinearLayout>
+
+
+    <RadioGroup
+        android:id="@+id/rg_edit_user_detail_gender_container"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:id="@+id/rb_edit_user_detail_gender_male"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"/>
+
+
+
+        <RadioButton
+            android:id="@+id/rb_edit_user_detail_gender_female"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+
+    </RadioGroup>
+
+
+
+
+
+</RelativeLayout>
