--- a/chat/src/main/res/layout/item_activity_chat_receive_text.xml
+++ b/chat/src/main/res/layout/item_activity_chat_receive_text.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
-    android:background="@drawable/chat_right_qp"
+    android:background="@drawable/chat_left_qp"
     android:gravity="center"
     android:lineSpacingExtra="6dp"
     android:maxWidth="225dp"
