--- a/chat/src/main/res/layout/item_activity_chat_send_location.xml
+++ b/chat/src/main/res/layout/item_activity_chat_send_location.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/rl_chat_send_location_item_content"
-    android:layout_width="150dp"
-    android:layout_height="100dp"
+<FrameLayout android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ImageView
-        android:id="@+id/iv_item_activity_chat_send_location_thumb"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/location_default"/>
-    <TextView
-        android:id="@+id/tv_item_activity_chat_send_location_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="你好"
-        android:textColor="@color/base_color_text_black"/>
-</RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_chat_send_location_item_content"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+        <ImageView
+            android:id="@+id/iv_item_activity_chat_send_location_thumb"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/location_default"/>
+        <TextView
+            android:id="@+id/tv_item_activity_chat_send_location_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="你好"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textColor="@color/base_color_text_black"/>
+    </RelativeLayout>
+
+
+</FrameLayout>
