--- a/chat/src/main/res/layout/item_activity_chat_send_video.xml
+++ b/chat/src/main/res/layout/item_activity_chat_send_video.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.jzvd.JZVideoPlayerStandard
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:id="@+id/js_item_activity_chat_send_video"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+<FrameLayout android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <cn.jzvd.JZVideoPlayerStandard
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:id="@+id/js_item_activity_chat_send_video"/>
+</FrameLayout>
