--- a/chat/src/main/res/layout/activity_nearby_people.xml
+++ b/chat/src/main/res/layout/activity_nearby_people.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/refresh_nearby_people_refresh"
+        android:id="@+id/refresh_activity_nearby_people_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView android:id="@+id/rcv_nearby_people_display"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"/>
+
+        <com.example.commonlibrary.baseadapter.SuperRecyclerView
+            android:id="@+id/srcv_activity_nearby_people_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
