--- a/chat/src/main/res/layout/fragment_share_info.xml
+++ b/chat/src/main/res/layout/fragment_share_info.xml
@@ -49,7 +49,7 @@
             android:id="@+id/fab_share_info_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fab_title="图片说说"
+            fab:fab_title="图片说说"
             fab:fab_colorNormal="@color/pink"
             fab:fab_colorPressed="@color/pink_pressed"
             fab:fab_icon="@drawable/ic_photo_white_24dp"
