[fix] 修复调整模块的bug

--- a/news/src/main/res/layout/view_fragment_index_pop_window.xml
+++ b/news/src/main/res/layout/view_fragment_index_pop_window.xml
@@ -11,6 +11,7 @@
         android:id="@+id/srcv_view_fragment_index_pop_display"/>
 
     <Button
+        android:visibility="gone"
         android:text="调整"
         android:id="@+id/btn_view_fragment_index_pop_adjust"
         android:layout_width="wrap_content"
