--- a/chat/src/main/res/layout/activity_login.xml
+++ b/chat/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="130dp"
         android:text="地倾"
         android:textColor="@color/base_color_text_blue"
         android:textSize="45sp"/>
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="200dp"
         android:orientation="vertical">
         <com.example.chat.view.AutoEditText
             android:id="@+id/aet_login_name"
@@ -70,17 +70,17 @@
             android:textColor="@color/base_color_text_white"
             android:textSize="18sp"/>
 
-        <Button
-            android:id="@+id/btn_login_main"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/btn_login_selector"
-            android:gravity="center"
-            android:text="@string/login_main"
-            android:textColor="@color/base_color_text_white"
-            android:textSize="18sp"/>
+        <!--<Button-->
+            <!--android:id="@+id/btn_login_main"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="48dp"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:layout_marginRight="15dp"-->
+            <!--android:background="@drawable/btn_login_selector"-->
+            <!--android:gravity="center"-->
+            <!--android:text="@string/login_main"-->
+            <!--android:textColor="@color/base_color_text_white"-->
+            <!--android:textSize="18sp"/>-->
     </LinearLayout>
 
 
