--- a/news/src/main/res/values/colors.xml
+++ b/news/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">@color/transparent</color>
     <color name="colorAccent">#FF4081</color>
     <color name="tab_text_color_normal">#A7A7A7</color>
     <color name="tab_text_color_selected">#FB5553</color>
