--- a/chat/src/main/res/values/colors.xml
+++ b/chat/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">@color/transparent</color>
     <color name="colorAccent">#FF4081</color>
     <!--<color name="base_color_text_white">#FFFFFF</color>-->
     <!--<color name="base_color_text_blue">#489cfa</color>-->
