--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -6,9 +6,8 @@
 
 
 
-
     <ImageView
-        android:src="@drawable/login_container_bg_03"
+        android:background="@color/white"
         android:id="@+id/iv_activity_splash_main_display"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
